--- a/ViewSample/app/src/main/res/layout/activity_main.xml
+++ b/ViewSample/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,15 @@
         android:layout_marginBottom="16dp"
         android:background="#ffffff"
         android:text="@string/tv_msg"
-        android:textSize="24sp"
+        android:textSize="24sp" />
+
+    <EditText
+        android:id="@+id/etInput"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="24dp"
+        android:layout_marginTop="8dp"
+        android:background="#ffffff"
+        android:inputType="text"
         />
-`
 </LinearLayout>
