--- a/HelloSample/app/src/main/res/layout/activity_main.xml
+++ b/HelloSample/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
         android:layout_height="wrap_content"
         android:text="@string/tv_name"/>
     <EditText
-        android:id="@+id/atName"
+        android:id="@+id/etName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
