--- a/ViewSample/app/src/main/res/layout/activity_main.xml
+++ b/ViewSample/app/src/main/res/layout/activity_main.xml
@@ -97,5 +97,11 @@
         android:layout_height="wrap_content"
         android:background="#000000"
         android:text="@string/bt_save" />
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:background="#ffffff"
+        android:entries="@array/lv_cocktaillist"/>
 
 </LinearLayout>
